# AST-Monitor

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HARDWARE_CONFIGURATION.md  LICENSE  README.md  output.py  pyproject.toml  read_gps_data.py  read_hr_data.py  requirements.txt  run_example.py  run_gps_simulation.py  tox.ini
.github/img/: README.md
.github/workflows/: python-app.yml
ast_monitor/: GoalsProcessor.py  __init__.py  ast.py  basic_data.py  classes.py  digital_twin.py  goals_processor.py  gps_sensor.py  hr_sensor.py  html_request_handler.py  interval_training.py  mainwindow.py  model.py  route_reader.py  send_data.py  simulation.py  training_session.py  write_log.py
ast_monitor/icons/: licence.txt
ast_monitor/map/: README.md  index.html  map.css  map.html  map.js  package-lock.json  package.json
ast_monitor/map/src/: App.vue  main.ts
ast_monitor/map/src/components/: DisplayCard.vue  Map.vue  RouteProgress.vue  TrainingMetrics.vue
ast_monitor/tests/: test_tcxreader.py
dev/: 15.tcx  ui_to_py.sh
dev/uis/: GUI2.ui
development/: ui_to_py.bat  ui_to_py.sh
development/datasets/: 15.tcx  15_old.tcx
development/routes/: route.json
development/trainings/: training.json  training0.json  training1.json
development/uis/: GUI2.ui
docs/: conf.py  contributing.rst  documentation.rst  getting_started.rst  index.rst  installation.rst  refs.bib
docs/api/: ast_monitor.rst  index.rst
examples/: read_gps_data.py  read_hr_data.py  read_route.py  run_example.py  run_gps_simulation.py  run_hr_simulation.py
sensor_data/: gps.txt  hr.txt
tests/: test_ast_monitor.py  test_gui.py  test_sport_activities_features.py  test_tcxreader.py
