[tool.poetry]
name = "ast_monitor"
version = "0.3.1"
description = "AST-Monitor is a wearable Raspberry Pi computer for cyclists"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka LukaÄ <luka.lukac@student.um.si>"]
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.cff", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "*"
matplotlib = "*"
geopy = "*"
pyqt-feedback-flow = "*"
tcxreader = "*"
sport-activities-features = "^0.2.18"
PyQtWebEngine = "^5.15.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
