[tool.poetry]
name = "ast_monitor"
version = "0.3.2"
description = "AST-Monitor is a wearable Raspberry Pi computer for cyclists"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>"]
keywords = ['artificial sport trainer', 'computational intelligence', 'data mining', 'datasets', 'digital twin', 'optimization', 'sport activities', 'tcx']
homepage = "https://github.com/firefly-cpp/AST-Monitor"
repository = "https://github.com/firefly-cpp/AST-Monitor"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.cff", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
PyQt5 = "*"
matplotlib = "*"
geopy = "*"
pyqt-feedback-flow = "^0.1.6"
tcxreader = "^0.4.2"
sport-activities-features = "^0.3.7.1"
PyQtWebEngine = "^5.15.5"
openant = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
