[tool.poetry]
name = "ast_monitor"
version = "0.5.0"
description = "AST-Monitor is a wearable Raspberry Pi computer for cyclists"
license = "MIT"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Luka Lukač <luka.lukac@student.um.si>", "Alen Rajšp <alen.rajsp@um.si>"]
keywords = ['artificial sport trainer', 'computational intelligence', 'data mining', 'datasets', 'digital twin', 'optimization', 'sport activities', 'tcx']
homepage = "https://github.com/firefly-cpp/AST-Monitor"
repository = "https://github.com/firefly-cpp/AST-Monitor"
documentation = "https://ast-monitor.readthedocs.io/en/latest/"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" },
    { path="CHANGELOG.md", format="sdist" },
    { path="CITATION.cff", format="sdist" },
    { path="HARDWARE_CONFIGURATION.md", format="sdist"}
]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "*"
geopy = "*"
tcxreader = "^0.4.2"
sport-activities-features = "^0.3.12"
openant = "^1.2.0"
PyQt6 = "6.4.2"
PyQt6-WebEngine = "^6.5.0"
pyqt-feedback-flow = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
Sphinx = "^5.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
